# etyviz

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  db.md  db_old.md  desc.md  doc.sql  graph.dot  initdb.sh  pyproject.toml  requirements.txt  todo.md
.github/ISSUE_TEMPLATE/: bug_report.md
data/: wiktextract-lite.jsonl
docs/: anomalies.html  columns.html  constraints.html  db.md  deletionOrder.txt  etyviz.public.xml  index.html  info-html.txt  insertionOrder.txt  local.md  orphans.html  relationships.html  routines.html  schemaSpy.css  server.md
docs/core/: anomalies.html  columns.html  constraints.html  deletionOrder.txt  etyviz.core.xml  index.html  info-html.txt  insertionOrder.txt  orphans.html  relationships.html  routines.html
schemaspy/: extra.css
sh/: exportdb.sh  flushdb.sh  get_dump.sh  get_schemaspy.sh  initdb.sh  installdb.sh  refresh_dump.sh  refreshdb.sh  reinitdb.sh  run_schemaspy.sh  testdb.sh
sql/: config.dump  db.md  dump.sh  edge.sql  etyviz.rules  etyviz.sql  extra_lang.sql  flow.sql  initdb.sql  lang.sql  lang_query.sql  languages.sql  links.sql  node.sql  populate.sql  pre.sql  recursive.sql  relations.sql  routines.sql  test.sql  wiktextract.sql  wiktionary.sql  words.sql
static/: bs-override.css  lang_input.js  selection.js  style.css  validate.js  validation.js  word_input.js
templates/: 404.html.jinja  base.html.jinja  dropdown.html  dropdown.html.jinja  github-corner.html.jinja  home.html  home.html.jinja  lang.html.jinja  langs.html.jinja  tables.html.jinja  word.html.jinja  words.html.jinja
tests/: timp_ro.json
(+212 files in other folders)
