[project]
name = "etyviz"
version = "0.0.1"
description = "We'll see"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Mihnea Mihai"}
]
keywords = ["etymology", "graph"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
]

[project.urls]
Homepage = "https://etyviz.mihai.lu" # tbd

[tool.pylint.format]
max-line-length = "88"
